--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required( VERSION 2.4 ) 
-PROJECT ( particle_filter_proj )
+PROJECT ( OzuComputerVision )
 
 if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
     SET(CRT_SECURE_NO_WARNINGS ON)
@@ -40,7 +40,6 @@ elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
     SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-function")
     SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -std=c++11 -g -m64 -fvisibility=hidden")
     SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -std=c++11 -O2 -g -finline-functions -m64 -mtune=native ${FLAGS_VISIBILITY}")
-    SET(DISABLE_SYNTHESIZER ON)
 endif()
 
 set( NAME_SRC particle_filter.cpp particle_filter.h)
@@ -48,7 +47,7 @@ set( NAME_SRC particle_filter.cpp particle_filter.h)
 find_package(OpenCV REQUIRED core imgproc highgui imgcodecs)
 
 include_directories(${OpenCV_INCLUDE_DIRS})
-link_directories( ${CMAKE_BINARY_DIR}/bin )
+#link_directories( ${CMAKE_BINARY_DIR}/bin )
 
-add_executable( particle_filter ${NAME_SRC} )
-target_link_libraries( particle_filter ${OpenCV_LIBS})
+add_executable( OzuComputerVision ${NAME_SRC} )
+target_link_libraries( OzuComputerVision ${OpenCV_LIBS})
